--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kodilla-intro'
 include 'Zmienne'
 include 'kodilla-basic-tests'
 include 'kodilla-collections'
+include 'kodilla-collections-advanced'
 
