--- a/kodilla-collections-advanced/build.gradle
+++ b/kodilla-collections-advanced/build.gradle
@@ -2,8 +2,13 @@ plugins {
     id 'java'
 }
 
-group 'com.kodilla'
-version '1.0-SNAPSHOT'
+version 'unspecified'
+
+sourceCompatibility = 1.8
+
+test {
+    useJUnitPlatform()
+}
 
 repositories {
     mavenCentral()
