--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,6 @@ include 'Zmienne'
 include 'kodilla-basic-tests'
 include 'kodilla-collections'
 include 'kodilla-collections-advanced'
+include 'kodilla-stream'
+include 'Potter'
 
